--- a/Documentation2.html
+++ b/Documentation2.html
@@ -60,17 +60,18 @@
 
         <ol>
             <li>Clone the Laravel project repository from GitHub:</li>
-            <pre><code>git clone https://github.com/username/repository.git</code></pre>
+            <pre><code>git clone https://github.com/arman-laravel-developer/laravel-pos.git</code></pre>
             <li>Navigate into the cloned project directory:</li>
             <pre><code>cd repository</code></pre>
-            <li>Copy <code>.env.example</code> file to <code>.env</code> and configure your database settings:</li>
+            <li>Copy <code>.env.example</code> file to <code>.env</code></li>
+            <pre><code>copy .env.example .env</code></pre>
+            <li>Configure your database settings on .env:</li>
             <pre><code>DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=your_database_name
-DB_USERNAME=your_database_username
-DB_PASSWORD=your_database_password</code></pre>
-            <li>Place your SQL file (e.g., <code>laravel_pos.sql</code>) in the Laravel project's database directory.</li>
+ DB_HOST=127.0.0.1
+ DB_PORT=3306
+ DB_DATABASE=your_database_name
+ DB_USERNAME=root
+ DB_PASSWORD=</code></pre>
             <li>Start your Apache and MySQL servers from the XAMPP Control Panel.</li>
             <li>Access phpMyAdmin by going to <code>http://localhost/phpmyadmin</code> in your browser.</li>
             <li>Create a new MySQL database with the same name as specified in your <code>.env</code> file (<code>your_database_name</code>).</li>
@@ -78,28 +79,28 @@ DB_PASSWORD=your_database_password</code></pre>
             <ol type="a">
                 <li>Click on the newly created database.</li>
                 <li>Click on the "Import" tab.</li>
-                <li>Choose your SQL file.</li>
+                <li>Choose your SQL file.(database/laravel_pos.sql)</li>
                 <li>Click "Go" to import the database.</li>
             </ol>
             <li>Install project dependencies using Composer:</li>
             <pre><code>composer install</code></pre>
             <li>Generate application key:</li>
             <pre><code>php artisan key:generate</code></pre>
-            <li>Migrate the database:</li>
-            <pre><code>php artisan migrate</code></pre>
-            <li>Optionally, seed the database with sample data:</li>
-            <pre><code>php artisan db:seed</code></pre>
             <li>Start the development server:</li>
             <pre><code>php artisan serve</code></pre>
             <li>Access the application in your browser:</li>
             <pre><code>http://localhost:8000</code></pre>
+            <li>Admin Access:</li>
+            <pre>Admin Email: admin@gmail.com</pre>
+            <pre>Admin Password: 12345678</pre>
         </ol>
 
         <h2>Additional Configuration</h2>
-        <p>You might need to configure other settings depending on the project requirements. Refer to the project documentation for further details.</p>
+        <p>All product and order routes are written in routes/admin.php file. All POS routes are written in routes/pos.php file.</p>
+        <p>All view files in POS are viewed from the pos_views/ directory</p>
 
         <h2>Conclusion</h2>
-        <p>You have successfully cloned and installed the Laravel project with PHP 8.1 and MySQL database on your XAMPP server environment, and manually imported the database from an SQL file. Happy coding!</p>
+        <p>You have successfully cloned and installed the Laravel project with PHP 8.1 and MySQL database on your XAMPP server environment, and manually imported the database from an SQL file.</p>
     </div>
 </body>
 
